--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Notaprogrammer</h1>                                          <p>i am a bored guy who likes to make thingz :P</p>
+<a>see my stuff: <a href="NotAProgrammer123-sys.github.io/stuff">
 </body>
 </html>
