--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Notaprogrammer</h1>                                          <p>i am a bored guy who likes to make thingz :P</p>
-<a>see my stuff: <a href="NotAProgrammer123-sys.github.io/stuff">here</a>
+<a>see my stuff: <a href="https://NotAProgrammer123-sys.github.io/stuff">here</a>
 </body>
 </html>
