--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Notaprogrammer</h1>                                          <p>i am a bored guy who likes to make thingz :P</p>
 <a>see my stuff: <a href="https://NotAProgrammer123-sys.github.io/stuff">here</a>
+  <a>see cool thingz: <a href="https://NotAProgrammer123-sys.github.io/cool_thingz">here</a>
 </body>
 </html>
