--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>Notaprogrammer</h1>                                          <p>i am a bored guy who likes to make thingz :P</p>
 <a>see my stuff: <a href="https://NotAProgrammer123-sys.github.io/stuff">here</a>
   <a>see cool thingz: <a href="https://NotAProgrammer123-sys.github.io/cool_thingz">here</a>
+    <a>content farming: <a href="https://NotAProgrammer123-sys.github.io/content_farming">here</a>
 </body>
 </html>
