--- a/stuff.html
+++ b/stuff.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to the Stuff Page</h1>
-    <p>This is where you can see all my stuff.</p>
+    <p>Closed due to lack of stuff.</p>
 </body>
 </html>
