--- a/something.html
+++ b/something.html
@@ -8,42 +8,59 @@
         body {
             background-color: black;
             color: white;
+            font-family: Arial, sans-serif;
+            overflow: hidden; /* Hide the scrollbar */
+        }
+
+        .scrolling-text {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 100vh;
+            justify-content: center;
+            animation: scroll 10s linear infinite;
+        }
+
+        @keyframes scroll {
+            0% {
+                transform: translateY(0);
+            }
+            100% {
+                transform: translateY(-100%);
+            }
+        }
+
+        .scrolling-text h1 {
+            margin: 0;
+            padding: 0;
+        }
+
+        .scrolling-wrapper {
+            overflow: hidden;
+            height: 100vh;
         }
     </style>
 </head>
 <body>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
-    <h1>SOMETHING</h1>
+    <div class="scrolling-wrapper">
+        <div class="scrolling-text">
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <h1>SOMETHING</h1>
+            <!-- Repeat as needed -->
+        </div>
+    </div>
 </body>
 </html>
