--- a/something.html
+++ b/something.html
@@ -3,64 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOMETHING THAT KEEPS REPEATING</title>
+    <title>SOMETHING THAT KEEPS ON REPEATING<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Infinite SOMETHING</title>
     <style>
         body {
             background-color: black;
             color: white;
             font-family: Arial, sans-serif;
-            overflow: hidden; /* Hide the scrollbar */
-        }
-
-        .scrolling-text {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: 100vh;
-            justify-content: center;
-            animation: scroll 10s linear infinite;
-        }
-
-        @keyframes scroll {
-            0% {
-                transform: translateY(0);
-            }
-            100% {
-                transform: translateY(-100%);
-            }
-        }
-
-        .scrolling-text h1 {
             margin: 0;
             padding: 0;
         }
 
-        .scrolling-wrapper {
-            overflow: hidden;
-            height: 100vh;
+        .infinite-scroll {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .infinite-scroll h1 {
+            margin: 0;
+            padding: 20px 0;
         }
     </style>
 </head>
 <body>
-    <div class="scrolling-wrapper">
-        <div class="scrolling-text">
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <h1>SOMETHING</h1>
-            <!-- Repeat as needed -->
-        </div>
+    <div class="infinite-scroll">
+        <!-- Repeating "SOMETHING" text -->
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <!-- Repeat more if necessary -->
     </div>
+
+    <script>
+        // JavaScript to clone the content and create an infinite loop effect
+        const scrollContainer = document.querySelector('.infinite-scroll');
+        const content = scrollContainer.innerHTML;
+
+        // Append the content to itself multiple times
+        for (let i = 0; i < 100; i++) {
+            scrollContainer.innerHTML += content;
+        }
+    </script>
+</body>
+</html>
+</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .infinite-scroll {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .infinite-scroll h1 {
+            margin: 0;
+            padding: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="infinite-scroll">
+        <!-- Repeating "SOMETHING" text -->
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <h1>SOMETHING</h1>
+        <!-- Repeat more if necessary -->
+    </div>
+
+    <script>
+        // JavaScript to clone the content and create an infinite loop effect
+        const scrollContainer = document.querySelector('.infinite-scroll');
+        const content = scrollContainer.innerHTML;
+
+        // Append the content to itself multiple times
+        for (let i = 0; i < 100; i++) {
+            scrollContainer.innerHTML += content;
+        }
+    </script>
 </body>
 </html>
