--- a/something.html
+++ b/something.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOMETHING THAT KEEPS ON REPEATING<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite SOMETHING</title>
+    <title>SOMETHING THAT KEEPS REPEATING</title>
     <style>
         body {
             background-color: black;
@@ -27,6 +22,18 @@
         .infinite-scroll h1 {
             margin: 0;
             padding: 20px 0;
+        }
+
+        .link {
+            margin-top: 50px;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .link a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -51,59 +58,10 @@
         <!-- Repeat more if necessary -->
     </div>
 
-    <script>
-        // JavaScript to clone the content and create an infinite loop effect
-        const scrollContainer = document.querySelector('.infinite-scroll');
-        const content = scrollContainer.innerHTML;
-
-        // Append the content to itself multiple times
-        for (let i = 0; i < 100; i++) {
-            scrollContainer.innerHTML += content;
-        }
-    </script>
-</body>
-</html>
-</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .infinite-scroll {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .infinite-scroll h1 {
-            margin: 0;
-            padding: 20px 0;
-        }
-    </style>
-</head>
-<body>
-    <div class="infinite-scroll">
-        <!-- Repeating "SOMETHING" text -->
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <h1>SOMETHING</h1>
-        <!-- Repeat more if necessary -->
+    <div class="link">
+        <a href="https://notaprogrammer123-sys.github.io" target="_blank">
+            Visit My Page
+        </a>
     </div>
 
     <script>
