--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
