--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt"></script>
+   <!-- Replace the variables below. -->
+<script>
+  function onSubmit(token) {
+    document.getElementById("demo-form").submit();
+  }
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
