--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     document.getElementById("demo-form").submit();
   }
 </script>
+   <button class="g-recaptcha"
+    data-sitekey="6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt"
+    data-callback='onSubmit'
+    data-action='submit'>
+  Submit
+</button>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
