--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt"></script>
-   <!-- Replace the variables below. -->
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt"></script>
+  <!-- Your code -->
 <script>
-  function onSubmit(token) {
-    document.getElementById("demo-form").submit();
+  function onClick(e) {
+    e.preventDefault();
+    grecaptcha.enterprise.ready(async () => {
+      const token = await grecaptcha.enterprise.execute('6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt', {action: 'LOGIN'});
+    });
   }
 </script>
-   <button class="g-recaptcha"
-    data-sitekey="6LeAn0IqAAAAAARAMl5Mr16YkgQhVtDNycplmCTt"
-    data-callback='onSubmit'
-    data-action='submit'>
-  Submit
 </button>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
